--- a/src/css/pages/_news.scss
+++ b/src/css/pages/_news.scss
@@ -103,6 +103,10 @@
                 margin: 0;
                 font-size: 15px;
                 text-transform: uppercase;
+                a {
+                    color: #000;
+                    display: inline-block;
+                }
             }
             .all {
                 a {
@@ -113,10 +117,10 @@
             }
         }
         &-item {
-            box-shadow: $shadow-menu;
+            // box-shadow: $shadow-menu;
             background-color: $white;
             border-radius: .375rem;
-            display: block;
+            display: block !important;
             .text {
                 padding: 14px;
                 a {
@@ -136,7 +140,7 @@
                     line-height: 20px;
                     p {
                         margin: 0;
-                        @include cut-text;
+                        @include cut-text-to(2);
                     }
                 }
             }
